# ChainMapper

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  commands.bash  devcontainer.json
sample/: powershell.evtx
src/chainmapper/: convert.py
